[package]
name = "pilcom-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0.79"
log = "0.4.0"
env_logger = "0.10"
chrono = "0.4"
rand = "0.4"
fields = { path = "../fields", default-features = false }
profiler_macro = {git = "https://github.com/ChengYueJia/profiler-rs", rev = "6d6a77f8"}
ark-std = { version = "0.4.0", optional = true }
rayon = { version = "1.5"}

